--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "web-midi-api": "^2.0.7"
   }
 }
